      aggregations are compiled to reduce the time a user has to wait for
      BI based view. This optimizes BI related views which display
      information for a specific list of hosts or aggregation groups.
    * Added new config option bi_compile_log to collect statistics about
      aggregation compilations
    * Correct representation of (!), (!!) and (?) markers in check output

    WATO:
    * Added progress indicator in single site WATO "Activate Changes"
    * Users & Contacts: Case-insensitive sorting of 'Full name' column
    * ntp/ntp.time parameters are now configurable via WATO
    * FIX: Implemented basic non HTTP 200 status code response handling in interactive
           progress dialogs (e.g. bulk inventory mode)
    * FIX: Fixed editing of icon_image rules

    Checks & Agents:
    * New check mssql_counters.locks: Monitors locking related information of
      MSSQL tablespaces
    * Check_MK service is now able to output additional performance data
      user_time, system_time, children_user_time, children_system time
    * windows_updates agent plugin: Fetching data in background mode, caching
      update information for 30 minutes
    * FIX: mssql_counters checks now really only inventorize percentage based
      counters if a base value is set

1.2.0p3:
    Mulitisite
    * Added "view" parameter to dashlet_pnpgraph webservice
    * FIX: BI: Assuming "OK" for hosts is now possible
    * FIX: Fixed error in makeuri() calls when no parameters in URL
    * FIX: Try out mode in view editor does not show context buttons anymore

    WATO
    * Added "profile" option to be configurable via browser
    * FIX: It is now possible to create clusters in empty folders
    * FIX: Fixed problem with complaining empty ListOf() valuespecs
    * FIX: Users & Contacts uses case-insensitive sorting of 'Full name' column  
    * FIX: Removed focus of "Full name" attribute on editing a contact
    * FIX: fix layout bug in ValueSpec ListOfStrings (e.g. used in